# TDD_FastApi

./: .env  .pre-commit-config.yaml  README.md  pyproject.toml
store/: main.py
store/schemas/: base.py  product.py
store/usecases/: product.py
tests/: factories.py
tests/schemas/: confitest.py  test_product.py
tests/usecases/: test_product.py
