[tool.poetry]
name = "tdd project"
version = "0.1.0"
description = ""
authors = ["Fernando Braz <fernandobraz88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
uvicorn = "^0.30.1"
pydantic-settings = "^2.3.4"
motor = "^3.4.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
